[project]
name = "langgraphtest"
version = "0.1.0"
description = ""
authors = [
    {name = "Imre Miklós",email = "imi.mickey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langgraph-supervisor (>=0.0.31,<0.0.32)",
    "langchain (>=1.2.0,<2.0.0)",
    "langgraph-swarm (>=0.1.0,<0.2.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "deepagents (>=0.2.8,<0.4.0)",
    "deepagents-cli (>=0.0.12,<0.0.13)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
